syntax = "proto3";
option go_package = "./apis/apispb";
import "trading/strategy.proto";
package apis;

enum CloseHodl {
    CLOSE_CLOSE_CLOSE = 0;
    HODL_HODL_HODL = 1;
}

enum BuyShort {
    BUY_BUY_BUY = 0;
    SHORT_SHORT_SHORT = 1;
}

message EvaluateStrategyRequest {
    trading.TradingStrategy Strategy = 1;
}

message GetStrategyForBuyShortResponse {
    BuyShort Response = 1;
}

message GetStrategyForCloseHodlResponse {
    CloseHodl Response = 1;
}

service BuyShortStrategyAPI {
    rpc GetStrategyForBuyShort(EvaluateStrategyRequest) returns (GetStrategyForBuyShortResponse);
}

service CloseHodlStrategyAPI {
    rpc GetStrategyForCloseHodl(EvaluateStrategyRequest) returns (GetStrategyForCloseHodlResponse);
}