syntax = "proto3";
option go_package = "./trading/tradingpb";
package trading;

// TradingStrategy represents our strategy on closing or opening a position
message TradingStrategy {
    // ID indicates which trading strategy to use
    string ID = 1;

    // Params is serialized JSON
    string Params = 2;
}

// WeightedTradingStrategy allows us to use multiple strategies
message WeightedTradingStrategy {
    // No limit.
    int64 Weight = 1;
    TradingStrategy Strategy = 2;
}